--- a/templates/article.html
+++ b/templates/article.html
@@ -2,9 +2,11 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>${billettitre} - Carnets Web de La Grange</title>
     <link rel="stylesheet" href="/2011/12/01/proto/style/article.css"/>
+    <link rel="alternate" type="application/atom+xml" href="http://www.la-grange.net/feed"
+/>
 </head>
 <body>
 <a class="nomSite" href="http://www.la-grange.net/">Les carnets Web de La Grange</a>
@@ -40,8 +42,8 @@
 ${billettexte}
 
 </article>
-<footer> 
-<address id="signature">Ce texte est publié par <span id="auteur"><a href="/karl/">Karl</a></span> sous un <a rel="license" href="http://creativecommons.org/licenses/by/2.0/fr/">contrat Creative Commons</a>. <a id="glicense" rel="license" href="http://creativecommons.org/licenses/by/2.0/fr/"><img alt="Creative Commons License" style="padding:0 1em;margin-bottom:7px;border-width:0" src="/2011/09/30/style/80x15-by" /></a></address>
+<footer>
+<address id="signature">Ce texte est publié par <span id="auteur"><a href="/karl/" rel="author">Karl</a></span></address> sous un <a rel="license" href="http://creativecommons.org/licenses/by/2.0/fr/">contrat Creative Commons</a>. <a id="glicense" rel="license" href="http://creativecommons.org/licenses/by/2.0/fr/"><img alt="Creative Commons License" style="padding:0 1em;margin-bottom:7px;border-width:0" src="/2011/09/30/style/80x15-by" /></a>
 
 </footer>
 
