Home Index now working

--- a/templates/last_posts.html
+++ b/templates/last_posts.html
@@ -1,1 +1,1 @@
-<li><time class="updated" datetime="${tupdated}">${tupdated_human}</time> <a class="post_title" href="${turl}">${ttitle}</a> <time class="created" datetime="${tpublished}">${tpublished_human}</time></li>
+<li><time class="updated" datetime="${tupdated}">${tupdated_human}</time> <span class="post"><a class="post_title" href="${turl}">${ttitle}</a> <time class="created" datetime="${tpublished}">${tpublished_human}</time></span></li>
