--- a/templates/index-mois.html
+++ b/templates/index-mois.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
 	<title>Archives ${monthname} ${year} - Carnets Web de La Grange</title>
+    <link rel="stylesheet" href="/2014/07/22/monthly-index.css"/>
 	<link rel="alternate" type="application/atom+xml" href="http://www.la-grange.net/feed.atom"/>
 </head>
 
@@ -25,13 +26,13 @@
 <section id="month-index">
 <ul>
 ${firstentry}
-</ul> 
+</ul>
 </section>
 
-<footer> 
-    <address id="signature">Ce texte est publié par 
-        <span id="auteur"><a href="/karl/">Karl</a></span> sous un 
-        <a rel="license" href="http://creativecommons.org/licenses/by/2.0/fr/">contrat Creative Commons</a>. 
+<footer>
+    <address id="signature">Ce texte est publié par
+        <span id="auteur"><a href="/karl/">Karl</a></span> sous un
+        <a rel="license" href="http://creativecommons.org/licenses/by/2.0/fr/">contrat Creative Commons</a>.
         <a id="glicense" rel="license" href="http://creativecommons.org/licenses/by/2.0/fr/"><img alt="Creative Commons License" style="padding:0 1em;margin-bottom:7px;border-width:0" src="/2011/09/30/style/80x15-by" /></a>
     </address>
 </footer>
